# coding-challenges

./: README.md
.trunk/: trunk.yaml
huffman/: .gitignore  README.md
huffman/src/: huffman.rs  main.rs  mode.rs
redis-server/: Cargo.toml  README.md  redis.conf
redis-server/diagrams/: flow.excalidraw
redis-server/scripts/: benchmark  depgraph  redis-server
redis-server/src/: command.rs  kvstore.rs  main.rs  serde.rs
redis-server/src/command/: config.rs  del.rs  echo.rs  exists.rs  get.rs  mod.rs  ping.rs  set.rs  types.rs
redis-server/src/request/: deserialize.rs  types.rs
redis-server/src/response/: types.rs
wc/: Cargo.toml  README.md
wc/src/: main.rs
