[package]
name = "redis-server"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.3", features = ["serde", "rayon", "inline", "arbitrary"] }
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["full"] }
